added new configuration for splitting coverage of unit and integrations tests